--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = 'https://fadiaarsadila.github.io/Belajar/'
 languageCode = 'en-us'
 title = 'My Hugo Website'
 theme="Base16"
